--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
-                  <version>4.4.0-SNAPSHOT</version>
+                <version>4.3.0</version>
             </plugin>
         </plugins>
     </build>
